--- a/app/webroot/css/view.css
+++ b/app/webroot/css/view.css
@@ -22,7 +22,7 @@
 		
 article {clear: both; position: relative; overflow: hidden;}
 article.listed {margin: 20px 0 40px; padding: 0 0 0 100px;}
-	article.listed ul {list-style-type: disc; margin-left: 20px; line-height: 1.2em; margin-bottom: 10px;}
+	article.listed ul {list-style-type: disc; margin-left: 20px; line-height: 1.2em; margin-bottom: 10px; overflow: hidden; padding-left: 20px;}
 	article .article-details {
 		position: absolute; 
 		left: 0; 
